<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
  xmlns:app="http://schemas.android.com/apk/res-auto" 
  android:id="@+id/scrollNavegacion" 
  android:background="?android:attr/windowBackground" 
  android:layout_width="match_parent" 
  android:layout_height="wrap_content" 
  app:layout_constraintBottom_toBottomOf="parent" 
  app:layout_constraintLeft_toLeftOf="parent" 
  app:layout_constraintRight_toRightOf="parent">
  <android.support.v7.widget.LinearLayoutCompat android:id="@+id/linearLayoutNavegacion" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_gravity="center" 
    android:orientation="horizontal">
    <Button android:id="@+id/navInicio" 
      style="@style/tab" 
      android:text="@string/inicio" 
      android:onClick="clicNavInicio" />
    <Button android:id="@+id/navClientes" 
      style="@style/tab" 
      android:text="@string/clientes" 
      android:onClick="clicNavClientes" />
    <Button android:id="@+id/navInvitados" 
      style="@style/tab" 
      android:text="@string/invitados" 
      android:onClick="clicNavInvitados"/>
    <Button android:id="@+id/navSesion" 
      style="@style/tab" 
      android:text="@string/sesion" 
      android:onClick="clicNavSesion"/>
    <Button android:id="@+id/navInicia" 
      style="@style/tab" 
      android:text="@string/iniciar_sesion" 
      android:onClick="clicNavInicia"/>
  </android.support.v7.widget.LinearLayoutCompat>
</HorizontalScrollView>