<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" 
  xmlns:app="http://schemas.android.com/apk/res-auto" 
  style="@style/body" 
  android:id="@+id/constraintLayout">
  <android.support.design.widget.CoordinatorLayout style="@style/main" 
    android:id="@+id/coordinator" 
    android:tag="coordinator" 
    app:layout_constraintBottom_toTopOf="@+id/navegacion" 
    app:layout_constraintLeft_toLeftOf="parent" 
    app:layout_constraintTop_toTopOf="parent">
    <android.support.v4.widget.NestedScrollView android:id="@+id/nestedScrollView" 
      style="@style/scroll_responsivo">
      <android.support.v7.widget.LinearLayoutCompat android:id="@+id/linearLayout" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:orientation="vertical" 
        android:layout_gravity="center">
        <android.support.design.widget.TextInputLayout android:id="@+id/campoCue" 
          android:layout_width="match_parent" 
          android:layout_height="wrap_content">
          <android.support.design.widget.TextInputEditText android:id="@+id/cue" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:hint="@string/cue" 
            android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:id="@+id/campoMatch" 
          android:layout_width="match_parent" 
          android:layout_height="wrap_content">
          <android.support.design.widget.TextInputEditText android:id="@+id/match" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:hint="@string/match" 
            android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button android:id="@+id/iniciaSesion" 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:text="@string/iniciar_sesion" 
          android:onClick="iniciaSesion"/>
      </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
  </android.support.design.widget.CoordinatorLayout>
  <include layout="@layout/navegacion" 
    android:id="@+id/navegacion"/>
</android.support.constraint.ConstraintLayout>